# cxx-module-packaging

./: LICENSE  README.md
experiments/01-no-packaging/: CMakeLists.txt
experiments/02-bmi-packaging/: CMakeLists.txt  conanfile.txt
experiments/02-bmi-packaging/fmt-recipe/: conanfile.py
experiments/03-imported-targets/: hello_world.cpp
experiments/03-imported-targets/fmt-recipe/: conanfile.py
experiments/03-imported-targets/fmt-recipe/test_package/: CMakeLists.txt  conanfile.py  example.cpp
